feat: libsodium Java FFM bindings
Signed-off-by: Anthony Petrov <anthony@swirldslabs.com>